--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <title>HOME - IFSP - Pirituba</title>
+     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -32,7 +34,7 @@
 
 
         <section>
-            <h1> Sobre a Biblioteca</h1>
+            <h1>Sobre a Biblioteca</h1>
 
             <article>
                 <img src="https://github.com/pwe-redes/pwe_imagens/blob/master/library.jpeg?raw=true" alt="Biblioteca" />
