--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
 
     <header id="cabecalho">
+
+         <div id="my_menu" align="right">
+	<a href="index.html">HOME</a> | <a href="contato.html">CONTATO</a> | <a href="sobre.html">SOBRE</a>
+  </div-->
+
         <img src="https://github.com/pwe-redes/pwe_imagens/blob/master/Logo.jpg?raw=true" alt=" " />
 
       <li><a href="./paginas/analise.html">Análise em desenvolvimento de sistemas</a></li>
@@ -19,6 +24,10 @@
         <li><a href="./paginas/gestao.html">Gestão em tecnologia da informação</a></li>
         <li><a href="./paginas/letras.html">Letras</a></li>
         <li><a href="./paginas/gestaopublica.html">Gestão Pública</a></li>
+
+        <nav>
+            <object width="100%" height="65px" data="menu.html"></object>
+        </nav>
       
     </header>
 
@@ -60,6 +69,5 @@
             IFSP - Câmpus Pirituba - Av. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100
         </p>
     </footer>
-   <script src="./js/header-component.js"></script>
 </body>
 </html>
