--- a/sobre.html
+++ b/sobre.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre</title>
+<meta charset="UTF-8">
+<title>IFSP - Pirituba</title>
+<script src="js/disabling.js"></script>
 </head>
 <body>
-  <h2>Página de sobre</h1>
-  <script src="../js/header-component.js"></script>
-
+  <header>
+    <div id="my_menu" align="right">
+	  <a href="index.html" target="_top">HOME</a> | <a href="contato.html" target="_top">CONTATO</a> | <a href="sobre.html" target="_top">SOBRE</a> | <a href="login.html" target="_top">LOGIN</a> | <a href="moodle.ptb.ifsp.edu.br" target="_top">Moodle</a> 
+    </div>  
+  </header>  
 </body>
 </html>
