--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,8 @@
   <header>
     <div id="my_menu" align="right">
 	  <a href="index.html" target="_top">HOME</a> | <a href="contato.html" target="_top">CONTATO</a> | <a href="sobre.html" target="_top">SOBRE</a> | <a href = "https://moodle.ptb.ifsp.edu.br/"></a>
-    </div>  
+    </div>
+    <h2>Página de contato</h1>
   </header>  
 </body>
 </html>
