--- a/menu_itens/index.html
+++ b/menu_itens/index.html
@@ -27,10 +27,9 @@
            <body>
 
                <header id="cabecalho">
-
-                 <div id="my_menu" align="right">
-                    <a href="index.html">HOME</a> | <a href="contato.html">CONTATO</a> | <a href="sobre.html">SOBRE</a> | <a href="login.html">LOGIN</a> | <a href="moodle.ptb.ifsp.edu.br">Moodle</a>
-                  </div>
+                <nav>
+                    <object width="100%" height="65px" data="menu_itens/menu.html"></object>
+                </nav>
                  
                    <img src="https://github.com/pwe-redes/pwe_imagens/blob/master/Logo.jpg?raw=true" alt=" " />
 
