--- a/menu_itens/contato.html
+++ b/menu_itens/contato.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <div id="my_menu" align="right">
-	  <a href="menu_itens/index.html" target="_top">HOME</a> | <a href="contato.html" target="_top">CONTATO</a> | <a href="menu_itens/sobre.html" target="_top">SOBRE</a> | <a href = "https://moodle.ptb.ifsp.edu.br/my/"></a> | <a href="menu_itens/login.html" target="_top">LOGIN</a> 
+	  <a href="index.html" target="_top">HOME</a> | <a href="contato.html" target="_top">CONTATO</a> | <a href="sobre.html" target="_top">SOBRE</a> | <a href = "https://moodle.ptb.ifsp.edu.br/my/"></a> | <a href="login.html" target="_top">LOGIN</a> 
     </div>
     <h2>Página de contato</h1>
   </header>  
