--- a/menu_itens/menu.html
+++ b/menu_itens/menu.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <div id="my_menu" align="right">
-	  <a href="menu_itens/index.html" target="_top">HOME</a> | <a href="menu_itens/contato.html" target="_top">CONTATO</a> | <a href="menu_itens/menu_itens/sobre.html" target="_top">SOBRE</a> | <a href="menu_itens/login.html" target="_top">LOGIN</a> | <a href="moodle.ptb.ifsp.edu.br" target="_top">Moodle</a> 
+	  <a href="index.html" target="_top">HOME</a> | <a href="contato.html" target="_top">CONTATO</a> | <a href="sobre.html" target="_top">SOBRE</a> | <a href="login.html" target="_top">LOGIN</a> | <a href="moodle.ptb.ifsp.edu.br" target="_top">Moodle</a> 
     </div>  
     <h2>Página de menu</h1>
   </header>  
