--- a/menu_itens/index.html
+++ b/menu_itens/index.html
@@ -28,7 +28,7 @@
 
                <header id="cabecalho">
                 <nav>
-                    <object width="100%" height="65px" data="menu_itens/menu.html"></object>
+                    <object width="100%" height="65px" data="menu.html"></object>
                 </nav>
                  
                    <img src="https://github.com/pwe-redes/pwe_imagens/blob/master/Logo.jpg?raw=true" alt=" " />
