--- a/menu_itens/index.html
+++ b/menu_itens/index.html
@@ -27,9 +27,9 @@
            <body>
 
                <header id="cabecalho">
-                <nav>
-                    <object width="100%" height="65px" data="menu.html"></object>
-                </nav>
+                <div id="my_menu" align="right">
+                    <a href="index.html">HOME</a> | <a href="contato.html">CONTATO</a> | <a href="sobre.html">SOBRE</a>
+                  </div>
                  
                    <img src="https://github.com/pwe-redes/pwe_imagens/blob/master/Logo.jpg?raw=true" alt=" " />
 
