--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
                <header id="cabecalho">
                 <div id="my_menu" align="right">
-                    <a href="index.html">HOME</a> | <a href="contato.html">CONTATO</a> | <a href="sobre.html">SOBRE</a>
-                  </div>
+                    <a href="index.html">HOME</a> | <a href="contato.html">CONTATO</a> | <a href="sobre.html">SOBRE</a> | <a href="login.html">LOGIN</a> | <a href="https://moodle.ptb.ifsp.edu.br/my/">Moodle</a>  
+                  </div> 
                  
                    <img src="https://github.com/pwe-redes/pwe_imagens/blob/master/Logo.jpg?raw=true" alt=" " />
 
